--- a/index.html
+++ b/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link type="stylesheet" href="./styles/style.css">
-  <!-- Bootstrap
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script> -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digimon</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous"><script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
+    <!-- Menu -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu-background">
+        <div class="container-fluid">
+          <a class="navbar-brand text-color" href="/">La página de los Digimones</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+
+      <!-- Container -->
+      <div>
+        <div class="container">
+            <div class="cont1">
+              <div>Digimon:</div>
+              <select name="select" id="digimonOpt">
+              </select>
+              <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
+            </div>
+        </div>
+        <div class="container">
+            <div class="card" style="width: 18rem;">
+               <div id="digimonImage"></div>
+              <div class="card-body">
+                <h5 class="card-title" id="digimonName"></h5>
+              <p class="card-text" id="digimonLevel"></p>
+              </div>
+            </div>
 
 
+            <div id="digimonName"></div>
+            <div id="digimonImage"></div>
+            <div id="digimonLevel"></div>
+            <canvas class="chart" id="myChart"></canvas>
+            <br />
+            <br />
+        </div>
+      </div>
+      <!-- Footer -->
+        <footer class="footer">
+            <div>
+                <span>La pagina de los Digimones - Proyecto 3</span>
+            </div>
+        </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/apisearch.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
