--- a/Public/index.html
+++ b/Public/index.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digimon</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous"><script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Digimon</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <header>
     <!-- Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu-background">
-        <div class="container-fluid">
-          <a class="navbar-brand text-color" href="/">La página de los Digimones</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-      </nav>
-
-      <!-- Container -->
-      <div>
-        <div class="container">
-            <div class="cont1">
-              <div>Digimon:</div>
-              <select name="select" id="digimonOpt">
-              </select>
-              <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card" style="width: 18rem;">
-               <div id="digimonImage"></div>
-              <div class="card-body">
-                <h5 class="card-title" id="digimonName"></h5>
-              <p class="card-text" id="digimonLevel"></p>
-              </div>
-            </div>
-
-
-            <div id="digimonName"></div>
-            <div id="digimonImage"></div>
-            <div id="digimonLevel"></div>
-            <canvas class="chart" id="myChart"></canvas>
-            <br />
-            <br />
+      <div class="container-fluid">
+        <a class="navbar-brand text-color" href="index.html">Manejo de API Digimon</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+          aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <!-- Container -->
+    <div>
+      <div class="container">
+        <div class="cont1">
+          <div>Digimon:</div>
+          <select name="select" id="digimonOpt">
+          </select>
+          <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
         </div>
       </div>
-      <!-- Footer -->
-        <footer class="footer">
-            <div>
-                <span>La pagina de los Digimones - Proyecto 3</span>
-            </div>
-        </footer>
+      <div class="container">
+        <div class="card" style="width: 18rem;">
+          <div id="digimonImage"></div>
+          <div class="card-body">
+            <h5 class="card-title" id="digimonName"></h5>
+            <p class="card-text" id="digimonLevel"></p>
+          </div>
+        </div>
+        <div id="digimonName"></div>
+        <div id="digimonImage"></div>
+        <div id="digimonLevel"></div>
+        <canvas class="chart" id="myChart"></canvas>
+        <br />
+        <br />
+      </div>
+    </div>
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
-    <script type="module" src="./js/main.js"></script>
-    <script type="module" src="./js/apisearch.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Footer -->
+  <footer class="footer">
+    <div>
+      <span>La pagina de los Digimones - Proyecto 3</span>
+    </div>
+  </footer>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/apisearch.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
