--- a/Public/index.html
+++ b/Public/index.html
@@ -17,9 +17,10 @@
 <body>
   <header>
     <!-- Menu -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu-background">
+    <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand text-color" href="index.html">Manejo de API Digimon</a>
+        <a class="navbar-brand" href="index.html"><img src="images/logo-1.png" alt="digimon-logo-1" width="10%"><strong>    Manejo de API Digimon</strong></a>
+        </div>
       </div>
     </nav>
   </header>
