Correccion de navbar

--- a/Public/index.html
+++ b/Public/index.html
@@ -29,14 +29,13 @@
     <!-- OPCION 2 -->
     <nav class="navbar navbar-expand-lg bg-dark" >
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="images/logo-1.png" alt="digimon-logo-1" width="10%"><strong>
-          Manejo de API Digimon</strong></a>
+        <img src="images/logo-1.png" alt="digimon-logo-1" width="10%">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="cont1">
             <label for="digimonOpt" class="visually-hidden">Selecciona un Digimon: </label>
-            <select name="select" id="digimonOpt" class="form-select" aria-label="Default select example">
+            <select name="select" id="digimonOpt" class="form-select m-3" aria-label="Default select example">
             </select>
             <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
         </div>
