--- a/Public/index.html
+++ b/Public/index.html
@@ -17,51 +17,29 @@
 <body>
   <header>
     <!-- Menu -->
-
-    <!-- OPCIÓN 1 -->
-    <!-- <nav class="navbar navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="images/logo-1.png" alt="digimon-logo-1" width="10%"><strong>
-            Manejo de API Digimon</strong></a>
-      </div>
-    </nav> -->
-
-    <!-- OPCION 2 -->
-    <nav class="navbar navbar-expand-lg bg-dark" >
-      <div class="container-fluid">
-        <img src="images/logo-1.png" alt="digimon-logo-1" width="10%">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="cont1">
-            <label for="digimonOpt" class="visually-hidden">Selecciona un Digimon: </label>
-            <select name="select" id="digimonOpt" class="form-select m-3" aria-label="Default select example">
-            </select>
-            <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
+    <div class="container-navBar">
+      <nav class="navbar navbar-expand-lg bg-dark" >
+        <div class="container-fluid">
+          <img src="images/logo-1.png" alt="digimon-logo-1" width="10%">
+          <div class="cont1">
+              <label for="digimonOpt" class="visually-hidden">Selecciona un Digimon: </label>
+              <select name="select" id="digimonOpt" class="form-select m-3" aria-label="Default select example">
+              </select>
+              <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main>
     <!-- Container -->
     <div>
       <div class="container">
-
-        <!-- OPCON 1 MENU -->
-        <!-- <div class="cont1 row g-3">
-          <div class="col-auto">
-            <label for="digimonOpt" class="visually-hidden">Selecciona un Digimon: </label>
-            <select name="select" id="digimonOpt" class="form-select" aria-label="Default select example">
-            </select>
-            <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
-          </div>
-        </div> -->
         <div class="cont2">
           <div class="card" style="width: 18rem;">
             <h5 class="card-title" id="digimonName"></h5>
             <div id="digimonImage"></div>
             <div class="card-body">
-              
               <p class="card-text text-center" id="digimonLevel"></p>
             </div>
           </div>
@@ -70,26 +48,26 @@
     </div>
 
     <div class="container grafic">
-      <!-- <div id="digimonName"></div>
-        <div id="digimonImage"></div>
-        <div id="digimonLevel"></div> -->
       <canvas class="chart" id="myChart"></canvas>
-      <br />
-      <br />
     </div>
-    </div>
+    
   </main>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="bg-dark text-white" id="Footer">
+    <div class="col-md-12 d-flex justify-content-center align-items-center">
+      <span class="text-muted">©2022 Proyecto DASHBOAR-COSUMO DE API, Ucamp Desarrollo Full Stack </span>
+    </div>
+</footer>
+
+<!--<footer class="footer">
     <div>
       <span>La pagina de los Digimones - Proyecto 3</span>
     </div>
-  </footer>
+  </footer> -->
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
   <script type="module" src="./js/main.js"></script>
-  <script type="module" src="./js/apisearch.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
