--- a/Public/index.html
+++ b/Public/index.html
@@ -20,12 +20,12 @@
     <div class="container-navBar backgrounds">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <img src="images/logo-1.png" alt="digimon-logo-1" width="10%">
+          <img class="logoNavBar" src="images/logo-1.png" alt="digimon-logo-1">
           <div class="cont1">
             <label for="digimonOpt" class="visually-hidden">Selecciona un Digimon: </label>
-            <select name="select" id="digimonOpt" class="form-select m-3" aria-label="Default select example">
+            <select name="select" id="digimonOpt" class="form-select m-3 labelDigimon" aria-label="Default select example">
             </select>
-            <button type="button" class="btn btn-success" id="digimonSearch">Buscar</button>
+            <button type="button" class="btn btn-success labelDigimon botonDigimon" id="digimonSearch">Buscar</button>
           </div>
         </div>
       </nav>
